--- a/metro-components.html
+++ b/metro-components.html
@@ -200,36 +200,66 @@
                   </div>
                </div>
    
+               <br/>
+   
    
                <h3>Commands with images</h3>
                <div class="bs-docs-example bs-docs-example-commands">
                   <button class="win-command" rel="tootlip" title="Simple command with only an icon">
                      <span class="win-commandimage">
-                        <img src="holder.js/40x40" alt=""/>
+                        <img src="content/img/sample-tiles.png" width="40" height="40" alt=""/>
                      </span>
                   </button>
    
                   <button class="win-command" rel="tootlip" title="Command with icon and label">
                      <span class="win-commandimage">
-                        <img src="holder.js/40x40" alt=""/>
+                        <img src="content/img/sample-tiles.png" width="40" height="40" alt=""/>
                      </span>
                      <span class="win-label">With label</span>
                   </button>
    
                   <button class="win-command" rel="tootlip" title="Command with icon with border ring">
                      <span class="win-commandimage win-commandring">
-                        <img src="holder.js/40x40" alt=""/>
+                        <img src="content/img/sample-tiles.png" width="40" height="40" alt=""/>
                      </span>
                   </button>
    
                   <button class="win-command" rel="tootlip" title="Command with icon and label with border ring">
                      <span class="win-commandimage win-commandring">
-                        <img src="holder.js/40x40" alt=""/>
+                        <img src="content/img/sample-tiles.png" width="40" height="40" alt=""/>
                      </span>
                      <span class="win-label">With ring &amp; label</span>
                   </button>
                </div>
+   <pre class="prettyprint linenums">
+   &lt;button class="win-command" rel="tootlip" title="Simple command with only an icon"&gt;
+      &lt;span class="win-commandimage"&gt;
+         &lt;img src="content/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
+      &lt;/span&gt;
+   &lt;/button&gt;
    
+   &lt;button class="win-command" rel="tootlip" title="Command with icon and label"&gt;
+      &lt;span class="win-commandimage"&gt;
+         &lt;img src="content/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
+      &lt;/span&gt;
+      &lt;span class="win-label"&gt;With label&lt;/span&gt;
+   &lt;/button&gt;
+   
+   &lt;button class="win-command" rel="tootlip" title="Command with icon with border ring"&gt;
+      &lt;span class="win-commandimage win-commandring"&gt;
+         &lt;img src="content/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
+      &lt;/span&gt;
+   &lt;/button&gt;
+   
+   &lt;button class="win-command" rel="tootlip" title="Command with icon and label with border ring"&gt;
+      &lt;span class="win-commandimage win-commandring"&gt;
+         &lt;img src="content/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
+      &lt;/span&gt;
+      &lt;span class="win-label"&gt;With ring &amp; label&lt;/span&gt;
+   &lt;/button&gt;
+   </pre>
+   
+               <hr class="bs-docs-separator"/>
    
                <h2>Customization</h2>
                <div class="bs-docs-example bs-docs-example-commands">
@@ -261,7 +291,6 @@
    
    
    
-   win-ui-dark
    
    
             </section>
