Completed Command buttons documentation page

--- a/appbar-demo.html
+++ b/appbar-demo.html
@@ -99,12 +99,11 @@
             </div>
             </div>
             <div id="top-info" class="pull-right">
-            <a id="settings" class="pull-right" href="#">
-               <b class="icon-settings"></b>
+            <a id="settings" href="#" class="win-command pull-right">
+               <span class="win-commandicon win-commandring icon-settings"></span>
             </a>
-            <!--<hr class="separator pull-right"/>-->
-            <a id="logged-user" href="#" class="pull-right">
-                  <b class="icon-user-2"></b>
+            <a id="logged-user" href="#" class="win-command pull-right">
+               <span class="win-commandicon win-commandring icon-user-2"></span>
             </a>
             <div class="pull-left">
                <h3>FirstName</h3>
@@ -119,7 +118,7 @@
    <div class="container">
       <div class="row">
          <div class="span12">
-            <p>This page show a full Application Bar stacked on the bottom of the page with plenty of commands.</p>
+            <p>This page show a full Application Bar stacked on the bottom of the page with plenty of command buttons.</p>
             <br />
    
             <form class="">
@@ -154,35 +153,35 @@
          <div class="row">
             <div class="span6 align-left">
    
-               <a class="win-command">
-                  <span class="win-commandimage win-commandring">&#x0021;</span>
+               <a class="win-command" href="#">
+                  <span class="win-commandicon win-commandring icon-home"></span>
                   <span class="win-label">Home</span>
                </a>
    
                <hr class="win-command" />
    
-               <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xe03e;</span>
+               <a class="win-command" href="#">
+                  <span class="win-commandicon win-commandring icon-plus-2"></span>
                   <span class="win-label">Add</span>
-               </button>
+               </a>
    
-               <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#x0052;</span>
+               <a class="win-command" href="#">
+                  <span class="win-commandicon win-commandring icon-out"></span>
                   <span class="win-label">Save</span>
-               </button>
+               </a>
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xe125;</span>
+                  <span class="win-commandicon win-commandring icon-reload"></span>
                   <span class="win-label">Reload</span>
                </button>
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xe1cd;</span>
+                  <span class="win-commandicon win-commandring icon-arrow-left-4"></span>
                   <span class="win-label">Previous</span>
                </button>
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xe1ca;</span>
+                  <span class="win-commandicon win-commandring icon-arrow-right-4"></span>
                   <span class="win-label">Next</span>
                </button>
    
@@ -191,37 +190,37 @@
             <div class="span6 align-right">
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xe202;</span>
+                  <span class="win-commandicon win-commandring icon-cog-2"></span>
                   <span class="win-label">Settings</span>
                </button>
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xE01D;</span>
+                  <span class="win-commandicon win-commandring icon-download"></span>
                   <span class="win-label">Download</span>
                </button>
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xE01F;</span>
+                  <span class="win-commandicon win-commandring icon-upload-2"></span>
                   <span class="win-label">Upload</span>
                </button>
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xE165;</span>
+                  <span class="win-commandicon win-commandring icon-email"></span>
                   <span class="win-label">Send Email</span>
                </button>
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#x0067;</span>
+                  <span class="win-commandicon win-commandring icon-search-2"></span>
                   <span class="win-label">Search</span>
                </button>
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xE001;</span>
+                  <span class="win-commandicon win-commandring icon-remove"></span>
                   <span class="win-label">Delete</span>
                </button>
    
                <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xE15F;</span>
+                  <span class="win-commandicon win-commandring icon-user-4"></span>
                   <span class="win-label">User</span>
                </button>
    
