--- a/metro-components.html
+++ b/metro-components.html
@@ -99,8 +99,8 @@
             </div>
             </div>
             <div id="top-info" class="pull-right">
-               <a id="settings" class="pull-right" href="#">
-                  <b class="icon-settings"></b>
+               <a id="settings" href="#" class="win-command pull-right">
+                  <span class="win-commandicon win-commandring icon-settings"></span>
                </a>
             </div>
          </div>
@@ -117,7 +117,7 @@
       <div class="row">
          <div class="span3 bs-docs-sidebar">
             <ul class="nav nav-list bs-docs-sidenav">
-               <li><a href="#commands"><i class="icon-chevron-right"></i> Commands</a></li>
+               <li><a href="#commands"><i class="icon-chevron-right"></i> Command Buttons</a></li>
                <li><a href="#progress"><i class="icon-chevron-right"></i> Metro Progress Bars</a></li>
                <li><a href="#modals"><i class="icon-chevron-right"></i> Modal</a></li>
                <li><a href="#datepicker"><i class="icon-chevron-right"></i> DatePicker</a></li>
@@ -126,7 +126,7 @@
          </div>
          <div class="span9">
    
-            <!-- Progress bars
+            <!-- Commands
             ================================================== -->
             <section id="commands">
                <div class="page-header">
@@ -134,8 +134,10 @@
                </div>
    
                <h2>Examples and markup</h2>
+               <p>Command styles can be applied to anything with the <code>.win-command</code> class applied. However, typically you'll want to apply these to only <code>&lt;a&gt;</code> and <code>&lt;button&gt;</code> elements for the best rendering.</p>
    
                <h3>Commands with icons</h3>
+               <p>To use one of the font icons provided with BootMetro, use a <code>.win-commandicon</code> and a <code>.icon-*</code> class.</p>
                <p>Hover each command to display an explanatory tooltip.</p>
                <div class="bs-docs-example bs-docs-example-commands">
                   <button class="win-command" rel="tootlip" title="Simple command with only an icon">
@@ -204,27 +206,28 @@
    
    
                <h3>Commands with images</h3>
+               <p>To use a custom image, use a <code>.win-commandimage</code> class.</p>
                <div class="bs-docs-example bs-docs-example-commands">
-                  <button class="win-command" rel="tootlip" title="Simple command with only an icon">
+                  <button class="win-command" rel="tootlip" title="Simple command with an image inside">
                      <span class="win-commandimage">
                         <img src="content/img/sample-tiles.png" width="40" height="40" alt=""/>
                      </span>
                   </button>
    
-                  <button class="win-command" rel="tootlip" title="Command with icon and label">
+                  <button class="win-command" rel="tootlip" title="Command with image and label">
                      <span class="win-commandimage">
                         <img src="content/img/sample-tiles.png" width="40" height="40" alt=""/>
                      </span>
                      <span class="win-label">With label</span>
                   </button>
    
-                  <button class="win-command" rel="tootlip" title="Command with icon with border ring">
+                  <button class="win-command" rel="tootlip" title="Command with image with border ring">
                      <span class="win-commandimage win-commandring">
                         <img src="content/img/sample-tiles.png" width="40" height="40" alt=""/>
                      </span>
                   </button>
    
-                  <button class="win-command" rel="tootlip" title="Command with icon and label with border ring">
+                  <button class="win-command" rel="tootlip" title="Command with image and label with border ring">
                      <span class="win-commandimage win-commandring">
                         <img src="content/img/sample-tiles.png" width="40" height="40" alt=""/>
                      </span>
@@ -232,26 +235,26 @@
                   </button>
                </div>
    <pre class="prettyprint linenums">
-   &lt;button class="win-command" rel="tootlip" title="Simple command with only an icon"&gt;
+   &lt;button class="win-command" rel="tootlip" title="Simple command with an image inside"&gt;
       &lt;span class="win-commandimage"&gt;
          &lt;img src="content/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
       &lt;/span&gt;
    &lt;/button&gt;
    
-   &lt;button class="win-command" rel="tootlip" title="Command with icon and label"&gt;
+   &lt;button class="win-command" rel="tootlip" title="Command with image and label"&gt;
       &lt;span class="win-commandimage"&gt;
          &lt;img src="content/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
       &lt;/span&gt;
       &lt;span class="win-label"&gt;With label&lt;/span&gt;
    &lt;/button&gt;
    
-   &lt;button class="win-command" rel="tootlip" title="Command with icon with border ring"&gt;
+   &lt;button class="win-command" rel="tootlip" title="Command with image with border ring"&gt;
       &lt;span class="win-commandimage win-commandring"&gt;
          &lt;img src="content/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
       &lt;/span&gt;
    &lt;/button&gt;
    
-   &lt;button class="win-command" rel="tootlip" title="Command with icon and label with border ring"&gt;
+   &lt;button class="win-command" rel="tootlip" title="Command with image and label with border ring"&gt;
       &lt;span class="win-commandimage win-commandring"&gt;
          &lt;img src="content/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
       &lt;/span&gt;
@@ -289,8 +292,25 @@
    }
    </pre>
    
+               <hr class="bs-docs-separator"/>
    
+               <h2>Command button sizes</h2>
+               <div class="bs-docs-example bs-docs-example-commands">
+                  <button class="win-command win-command-small" rel="tootlip" title="Command with icon and label with border ring, with a custom color">
+                     <span class="win-commandicon win-commandring icon-settings"></span>
+                     <span class="win-label">Small size</span>
+                  </button>
    
+                  <button class="win-command" rel="tootlip" title="Command with icon and label with border ring, with a custom color">
+                     <span class="win-commandicon win-commandring icon-settings"></span>
+                     <span class="win-label">Default size</span>
+                  </button>
+   
+                  <button class="win-command win-command-large" rel="tootlip" title="Command with icon and label with border ring, with a custom color">
+                     <span class="win-commandicon win-commandring icon-settings"></span>
+                     <span class="win-label">Large size</span>
+                  </button>
+               </div>
    
    
             </section>
@@ -668,8 +688,8 @@
                                  </div>
                               </div>
                            </div>
-                           <a class="left carousel-control" href="#myCarousel" data-slide="prev">&#xe0f4;</a>
-                           <a class="right carousel-control" href="#myCarousel" data-slide="next">&#xe0f1;</a>
+                           <a class="left carousel-control" href="#myFlipview" data-slide="prev">&#xe0f4;</a>
+                           <a class="right carousel-control" href="#myFlipview" data-slide="next">&#xe0f1;</a>
                         </div>
                      </div>
                   </div>
