--- a/pivot.html
+++ b/pivot.html
@@ -99,8 +99,8 @@
             </div>
             </div>
             <div id="top-info" class="pull-right">
-               <a id="settings" class="pull-right" href="#">
-                  <b class="icon-settings"></b>
+               <a id="settings" href="#" class="win-command pull-right">
+                  <span class="win-commandicon win-commandring icon-settings"></span>
                </a>
             </div>
          </div>
