work-in-progress: re-added nicescroll to panorama. Win-Commands wip

--- a/icons.html
+++ b/icons.html
@@ -122,7 +122,7 @@
          <div class="span12">
    
             <div id="icomoon-container" class="w-main centered">
-                     <p><span class="label label-important">Important!</span> Please remember to edit the file <em>bootmetro-icons.css</em> or <em>bootmetro-icons.less</em> to change the icomoon font files path according to your project structure.</p>
+               <p><span class="label label-important">Important!</span> Please remember to edit the file <em>bootmetro-icons.css</em> or <em>bootmetro-icons.less</em> to change the icomoon font files path according to your project structure.</p>
    
                <section class="mtm clearfix" id="glyphs">
                   <header>
@@ -5573,13 +5573,13 @@
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
-   <!--<script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>-->
+   <script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>
    <script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
    <script type="text/javascript">
       $('.panorama').panorama({
-         nicescroll: false,
+         nicescroll: true,
          showscrollbuttons: true,
          keyboard: true
       });
