--- a/wizard.html
+++ b/wizard.html
@@ -202,13 +202,13 @@
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
-   <!--<script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>-->
+   <script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>
    <script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
    <script type="text/javascript">
       $('.panorama').panorama({
-         nicescroll: false,
+         nicescroll: true,
          showscrollbuttons: true,
          keyboard: true
       });
