updated icomoon PUA compliant web icons. Started new index works...

--- a/index2.html
+++ b/index2.html
@@ -10,9 +10,9 @@
    <!-- Mobile viewport optimized: h5bp.com/viewport -->
    <meta name="viewport" content="width=device-width">
 
-   <title>BootMetro</title>
+   <title>Index2 · BootMetro</title>
 
-   <meta name="robots" content="index, nofollow">
+   <meta name="robots" content="noindex, nofollow">
    <meta name="description" content="BootMetro : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
    <meta name="keywords" content="bootmetro, modern ui, modern-ui, metro, metroui, metro-ui, metro ui, windows 8, metro style, bootstrap, framework, web framework, css, html" />
    <meta name="author" content="AozoraLabs by Marcello Palmitessa"/>
@@ -63,7 +63,13 @@
    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
    <![endif]-->
 
-   <header id="hero" class="">
+   <header>
+      <div class="page-header">
+         <h1>BootMetro</h1>
+         <h2>Metro style web framework</h2>
+      </div>
+   </header>
+   <div id="hero" class="">
    
          <div class="jumbotron masthead">
             <div class="container-fluid">
@@ -104,7 +110,7 @@
             </div>
          </div>
    
-   </header>
+   </div>
    
    
    
