--- a/metro-layouts.html
+++ b/metro-layouts.html
@@ -20,10 +20,9 @@
    <!-- remove or comment this line if you want to use the local fonts -->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 
-   <!--<link rel="stylesheet" type="text/css" href="content/css/bootstrap.css">-->
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-icons.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro-responsive.css">
+   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-icons.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro-ui-light.css">
    <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
    <!--[if IE 7]>
@@ -100,7 +99,7 @@
             </div>
             <div id="top-info" class="pull-right">
             <a id="settings" href="#" class="win-command pull-right">
-               <span class="win-commandicon win-commandring icon-cog"></span>
+               <span class="win-commandicon win-commandring icon-cog-3"></span>
             </a>
             <a id="logged-user" href="#" class="win-command pull-right">
                <span class="win-commandicon win-commandring icon-user"></span>
