--- a/index2.html
+++ b/index2.html
@@ -65,7 +65,7 @@
    <!-- Header
    ================================================== -->
    <header id="nav-bar" class="container">
-      <h1>bootmetro <small class="pull-right">metro style web framework</small></h1>
+      <h1>bootmetro <small>metro style web framework</small></h1>
       <!--<h2>Metro style web framework</h2>-->
    </header>
    
